--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">reviews</string>
+    <string name="search_button_name">Go!</string>
+    <string name="logo_title">bViz</string>
 </resources>
