--- a/review/src/main/res/values/strings.xml
+++ b/review/src/main/res/values/strings.xml
@@ -4,4 +4,21 @@
     <string name="search_button_name">Search</string>
     <string name="logo_title">bViz</string>
     <string name="main_menu_home">Home</string>
+    <string name="search_hint">Search an app…</string>
+
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+    <string name="title_activity_activity_search">Results</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_details">DetailsActivity</string>
+    <string name="image_description">Image</string>
+    <string name="action_compare">Compare</string>
+    <string name="list_empty">There\'s nothing here</string>
+    <string name="title_activity_reviews">ReviewsActivity</string>
+    <string name="title_activity_comparison">ComparisonActivity</string>
+    <string name="loading">Loading ...</string>
+    <string name="spinner">Topics</string>
+    <string name="title_activity_reviews_comparison">Comparison reviews</string>
 </resources>
