--- a/review/src/main/res/values/strings.xml
+++ b/review/src/main/res/values/strings.xml
@@ -12,10 +12,10 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_details">DetailsActivity</string>
+    <string name="title_activity_details">Application</string>
     <string name="image_description">Image</string>
     <string name="action_compare">Compare</string>
-    <string name="list_empty">There\'s nothing here</string>
+    <string name="list_empty">No items</string>
     <string name="title_activity_reviews">ReviewsActivity</string>
     <string name="title_activity_comparison">ComparisonActivity</string>
     <string name="loading">Loading …</string>
@@ -24,4 +24,9 @@
     <string name="action_install">Install</string>
     <string name="go_to">See more</string>
     <string name="title_activity_package">PackageActivity</string>
+    <string name="action_clear">Clear History</string>
+
+    <!-- Toast messages -->
+    <string name="app_not_found">Application not found</string>
+    <string name="list_error">Check your internet connection</string>
 </resources>
