--- a/review/src/main/res/values/strings.xml
+++ b/review/src/main/res/values/strings.xml
@@ -41,4 +41,9 @@
     <string name="rating_title">Rating</string>
     <string name="date_title">Publication date</string>
     <string name="action_spinner_app">Choose app</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="pref_notifications_title">Notifications</string>
+    <string name="pref_notifs_enable_summary">Enable or disable the notifications</string>
+    <string name="pref_notifs_enable_title">Enable</string>
+    <string name="pref_key_notifs_enable">PREF_KEY_NOTIFS_ENABLE</string>
 </resources>
