--- a/review/src/main/res/values/strings.xml
+++ b/review/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="search_button_name">Search</string>
     <string name="logo_title">bViz</string>
     <string name="main_menu_home">Home</string>
-    <string name="search_hint">Search an app…</string>
+    <string name="search_hint">Search for an app…</string>
 
     <string name="title_activity_discover_apps">Best and worst</string>
 
@@ -74,6 +74,12 @@
     <string name="tutorial_favorite">
         When you watch an application in details, you can add it in favorite, and you will be able to retrieve them
         here !
+    </string>
+    <string name="tutorial_headline_1">
+        Enter some keywords and look for applications on the Google Play Store
+    </string>
+    <string name="tutorial_headline_2">
+        Explore the opinions of the crowd about topics
     </string>
 
     <!-- Resources -->
